k8s/ingress/java-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
spec:
  rules:
    - host: "ourlytics.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: greeting-service
                port:
                  number: 80
